<resources>
    <string name="app_name">FeedMe</string>
    <string name="thumbnail">thumbnail</string>
    <string name="call">Call</string>
    <string name="menu_filter">Filter</string>
    <string name="list_tab">List</string>
    <string name="map_tab">Map</string>
    <string name="distance" formatted="false">%.2f km</string>
    <string name="empty" />
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="menu_shopping_cart">Cart</string>
    <string name="remove_from_cart">הוצא מהסל</string>
    <string name="add_to_cart">הוסף לסל</string>
    <string name="checkout">Checkout</string>
    <string name="transition_cart">TransitionCart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="association">עמותה</string>
    <string name="name_placeholder">lorem ipsum</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="my_donations">My Donations</string>
    <string name="profile">My Profile</string>
    <string name="dialog_return_donation">פעולה זו תחזיר את התרומה למאגר התרומות כך שתיהיה זמינה שוב לכולם. האם אתה בטוח?</string>
    <string name="yes">כן</string>
    <string name="cancel">בטל</string>
    <string name="Hello">שלום</string>
    <string name="please_wait">נא להמתין</string>

    <string name="add_donation">New donation</string>
    <string name="business_address">כתובת בית העסק</string>
    <string name="contact_phone">מספר פלאפון</string>
    <string name="remove_registration">הסר רישום</string>
    <string name="address_hint">עיר רחוב ומספר</string>
    <string name="non_profit_name">שם העמותה</string>
    <string name="contact_name">שם איש קשר</string>
    <string name="register">הרשם</string>
    <string name="register_as_donor">הרשם כתורם</string>
    <string name="business_name">שם בית עסק</string>
    <string name="donation_type">סוג התרומות של בית העסק</string>
    <string name="address">כתובת</string>
    <string name="enter_address">הכנס כתובת</string>
    <string name="update">עדכן</string>
    <string name="unrecognized_address">כתובת לא מזוהה</string>
    <string name="address_changes_successfully">כתובת שונתה בהצלחה</string>
    <string name="returned_donation_successfully">התרומה החוזרה בהצלחה</string>
    <string name="enter_contact_name">הכנס שם של איש הקשר</string>
    <string name="contact_changed_successfully">איש קשר שונה בהצלחה</string>
    <string name="phone">טלפון</string>
    <string name="enter_phone">הכנס טלפון של איש הקשר</string>
    <string name="contact_phone_changed_successfully">טלפון איש הקשר שונה בהצלחה</string>
    <string name="remove_registration_confirmation">האם אתה בטוח שתרצה להסיר את רישומך?</string>
    <string name="remove_registration_successfully">רישומך הוסר בהצלחה</string>
    <string name="enter_business_name">הכנס שם של בית העסק</string>
    <string name="business_name_changed_successfully">שם בית העסק שונה בהצלחה</string>
    <string name="donation_type_changed_successfully">סוג התרומות שונה בהצלחה</string>
    <string name="new_donation">תרומה חדשה של</string>
    <string name="donation_description">מה תרצה לתרום?</string>
    <string name="add_image">תרצה להוסיף תמונה?</string>
    <string name="donation_time">עד איזה שעה אפשר להגיע?</string>
    <string name="add_new_donation">שגר</string>
    <string name="description_hint">למשל: 2 קילו עגבניות</string>
    <string name="remove_donation">אתה בטוח רוצה לבטל תרומה זו?</string>
    <string name="remove_donation_successfully">התרומה הוסרה בהצלחה</string>
    <string name="time_to_pick" formatted="false">ניתן לאסוף עד %1$s</string>
    <string name="first_name">שם פרטי</string>
    <string name="last_name">שם משפחה</string>
    <string name="edit_contact_details">ערוך פרטי התקשרות</string>
    <string name="mark_taken">לקחתי את התרומה</string>
    <string name="owned_donations">התרומות שלך :)</string>
    <string name="missed_donation">מצטערים, מישהו כבר לקחת תרומה זו</string>
    <string name="email_authorization_sent">אימייל לארגונך נשלח על מנת לאשר אותך.</string>
    <string name="ok">@android:string/ok</string>
    <string name="email_authorization_fail">האימייל של העמותה שלך %s לא נמצא במאגר הנתונים שלנו. אנא וודא כי השם שהכנסת נכון. </string>
    <string name="contact_id">ת.ז</string>
    <string name="error_id">אנא הכנס מספר ת.ז שוב</string>
    <string name="street">רחוב</string>
    <string name="address_number">מספר</string>
    <string name="city">עיר</string>
    <string name="sorry">סליחה</string>
    <string name="unauthorize_message">מצטרים, אירגונך עדיין לא אישר אותך במייל.</string>
    <string name="address_header">כתובת העמותה</string>
    <string name="input">הכנס</string>
    <string name="edit_non_profit_name">ערוך שם עמותה</string>
    <string name="edit_phone">ערוך מספר טלפון</string>
    <string name="edit_contact_name">ערוך את שם איש הקשר</string>
    <string name="edit_bussiness_name">ערוך את שם בית העסק</string>
    <string name="resend_email_authorization">לשלוח אימייל נוסף לאישורך?</string>
    <string name="authrization_confimed">קיבלנו אישור מאירגונך :)</string>
    <string name="authrization_confimed_msg">כעת האפליקציה פתוחה לכל השימושים</string>
    <string name="non_profit_id_hint"><font size="15">מספר עמותה, כפי שמופיע ברשם העמותות</font></string>
    <string name="donation_expired_title">שים לב, תוקף התרומה שלך עומד לפוג</string>
    <string name="donation_expired_msg">אתה יכול לעדכן את זמן האיסוף \nאו שהתרומה תרד מהאוויר.</string>
    <string name="pick_image_intent_text">בחר אפליקציה:</string>
    <string name="apply_filter">הפעל</string>
    <string name="remove_donation_checkbox">אני רוצה להסיר תרומה זו מהתרומות שלי</string>

</resources>
