<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            app:actionLayout="@layout/menu_counter"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_favorite_black_24dp"
            app:actionLayout="@layout/menu_counter"
            android:title="@string/saved" />
        <item
            android:id="@+id/nav_my_donations"
            android:icon="@drawable/ic_event_available_black_24dp"
            app:actionLayout="@layout/menu_counter"
            android:title="@string/my_donations" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />

    </group>

</menu>
