<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/contact_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:text="הרשם כעמותה"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        android:typeface="serif" />

    <!--name-->
    <EditText
        android:id="@+id/non_profit_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/non_profit_name" />


    <!--address-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/address_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/address_header"/>

        <EditText
            android:id="@+id/non_profit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_header"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="@string/non_profit_address" />

    </RelativeLayout>

    <!--contact name-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/contact_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/contact_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_header"
            android:orientation="horizontal"
            android:weightSum="100">

            <EditText
                android:id="@+id/non_profit_lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/last_name" />

            <EditText
                android:id="@+id/non_profit_fname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/first_name" />
        </LinearLayout>

    </RelativeLayout>

    <!--contact id-->
    <EditText
        android:id="@+id/contact_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/contact_id"
        android:inputType="phone"/>

    <!--phone-->
    <EditText
        android:id="@+id/contact_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/contact_phone"
        android:inputType="phone" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="8dp"
        android:layout_marginTop="16dp"
        card_view:cardCornerRadius="4dp">

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:textSize="25sp"
            android:text="@string/register"
            android:textColor="@color/lightPrimaryColor" />
    </android.support.v7.widget.CardView>
</LinearLayout>