<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:padding="16dp">

    <!--header-->
    <TextView
        android:id="@+id/contact_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/register_as_donor"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        android:typeface="serif" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <!--business name-->
            <EditText
                android:id="@+id/donor_business_name"
                android:layout_alignParentTop="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/business_name" />

            <!--contact-->
            <RelativeLayout
                android:id="@+id/contact_container"
                android:layout_below="@id/donor_business_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/contact_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/contact_name"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contact_header"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <EditText
                        android:id="@+id/donor_lname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:hint="@string/last_name" />

                    <EditText
                        android:id="@+id/donor_fname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:hint="@string/first_name" />
                </LinearLayout>

            </RelativeLayout>


            <!--address-->
            <RelativeLayout
                android:id="@+id/address_container"
                android:layout_below="@id/contact_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/address_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/business_address"/>

                <EditText
                    android:id="@+id/donor_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/address_header"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:hint="@string/address_hint" />
            </RelativeLayout>

            <!--phone-->
            <EditText
                android:id="@+id/donor_phone"
                android:layout_below="@id/address_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/contact_phone"
                android:inputType="phone" />

            <!--donationType-->
            <RelativeLayout
                android:id="@+id/donation_type_container"
                android:layout_below="@id/donor_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="1dp">

                <TextView
                    android:id="@+id/donation_type"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="4dp"
                    android:layout_height="wrap_content"
                    android:text="@string/donation_type"/>

                <Spinner
                    android:id="@+id/donation_type_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:paddingStart="4dp"
                    android:layout_toStartOf="@id/donation_type" />
            </RelativeLayout>

            <!--divider-->
            <View
                android:id="@+id/divider"
                android:layout_below="@id/donation_type_container"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <android.support.v7.widget.CardView
                android:layout_below="@id/divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:elevation="8dp"
                android:paddingBottom="8dp"
                android:layout_marginTop="24dp"
                card_view:cardCornerRadius="10dp"
                android:layout_marginBottom="30dp">

                <Button
                    android:id="@+id/submit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:paddingLeft="70dp"
                    android:paddingRight="70dp"
                    android:textSize="25sp"
                    android:text="@string/register"
                    android:textColor="@color/lightPrimaryColor" />
            </android.support.v7.widget.CardView>
    </RelativeLayout>
   </ScrollView>
</LinearLayout>