<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardview_light_background"
    android:weightSum="1"
    android:baselineAligned="false">

    <TextView
        android:id="@+id/donation_type_header"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:paddingStart="12dp"
        android:layout_gravity="center_horizontal"
        android:paddingEnd="12dp"
        android:typeface="serif"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:text="@string/donation_description"
            android:id="@+id/donation_description_header"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/donation_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/donation_description_header"
            android:layout_marginTop="2dp"
            android:gravity="start"
            android:hint="@string/description_hint"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_alignParentEnd="true"
            android:maxLines="3"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/pick_time_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:text="@string/donation_time"
            android:id="@+id/donation_time_header"
            android:layout_alignParentEnd="true"
            android:textSize="18sp" />

        <ImageButton
            android:layout_marginStart="16dp"
            android:background="@null"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_access_time_black_40dp" />

        <TextView
            android:id="@+id/time_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:textSize="18sp"
            android:visibility="gone"
            android:layout_toStartOf="@+id/donation_time_header"
            android:layout_alignBottom="@+id/donation_time_header" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/add_image_btn"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:layout_alignParentEnd="true"
            android:paddingStart="12dp"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/add_image"
            android:id="@+id/add_image_header"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/add_image"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@null"
            android:src="@drawable/ic_add_a_photo_black_40dp"/>

        <ImageView
            android:id="@+id/image_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:visibility="gone"
            android:src="@drawable/ic_check_black_24dp"
            android:layout_toEndOf="@+id/add_image" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:elevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/add_donation_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/add_donation_btn"
                android:clickable="true"
                android:elevation="8dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/add_new_donation"
                android:textColor="@android:color/white"
                android:textSize="40sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

</LinearLayout>