<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:weightSum="1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/background">
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <!--name-->
            <RelativeLayout
                android:id="@+id/name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp">

                <!--name header-->
                <TextView
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:clickable="true"
                    android:paddingEnd="12dp"
                    android:text="@string/non_profit_name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/non_profit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_name"
                    android:layout_marginTop="2dp"
                    android:padding="8dp"
                    android:gravity="start"
                    android:paddingEnd="12dp"
                    android:drawablePadding="8dp"
                    android:layout_alignParentEnd="true"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
        </RelativeLayout>

            <!--divider-->
            <View
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/name_container"
                android:background="@color/divider" />

            <!--address-->
            <RelativeLayout
                android:id="@+id/address_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider_1"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/edit_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:clickable="true"
                    android:paddingEnd="12dp"
                    android:text="@string/address"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/non_profit_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_address"
                    android:layout_marginTop="2dp"
                    android:padding="8dp"
                    android:gravity="start"
                    android:paddingEnd="12dp"
                    android:drawablePadding="8dp"
                    android:layout_alignParentEnd="true"
                    android:drawableEnd="@drawable/ic_edit_black_24dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </RelativeLayout>

            <!--divider-->
            <View
                android:id="@+id/divider_2"
                android:layout_below="@id/address_container"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <!--contact-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider_2"
                android:id="@+id/contact_container"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/edit_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:clickable="true"
                    android:paddingEnd="12dp"
                    android:text="@string/contact_name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/contact_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_contact"
                    android:layout_marginTop="2dp"
                    android:padding="8dp"
                    android:gravity="start"
                    android:paddingEnd="12dp"
                    android:drawablePadding="8dp"
                    android:layout_alignParentEnd="true"
                    android:drawableEnd="@drawable/ic_edit_black_24dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </RelativeLayout>

            <!--divider-->
            <View
                android:layout_below="@id/contact_container"
                android:id="@+id/divider_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <!--phone-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_below="@id/divider_3"
                android:id="@+id/phone_container"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:clickable="true"
                    android:paddingEnd="12dp"
                    android:text="@string/contact_phone"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/contact_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_phone"
                    android:layout_marginTop="2dp"
                    android:padding="8dp"
                    android:gravity="end"
                    android:paddingEnd="12dp"
                    android:drawablePadding="8dp"
                    android:layout_alignParentEnd="true"
                    android:drawableEnd="@drawable/ic_edit_black_24dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </RelativeLayout>

            <!--divider-->
            <View
                android:layout_below="@id/phone_container"
                android:id="@+id/divider_4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_below="@id/divider_4"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:layout_centerInParent="true"
                android:layout_marginBottom="30dp"
                android:elevation="8dp"
                android:layout_marginTop="24dp"
                card_view:cardCornerRadius="10dp">

                <Button
                    android:id="@+id/remove_registration_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:paddingLeft="70dp"
                    android:paddingRight="70dp"
                    android:textSize="25sp"
                    android:text="@string/remove_registration"
                    android:textColor="@color/lightPrimaryColor" />
        </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>